--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,49 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap');
+body {
+    margin: 0;
+    font-family: 'Open Sans', sans-serif;
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
+.AppHeader {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.AppTitle {
+    display: flex;
+    width: 25vw;
+    border-right: 1px solid #ccc;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 20px;
 }
 
-.App-link {
-  color: #09d3ac;
+.AppRoom {
+    display: flex;
+    width: 75vw;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 20px;
+}
+
+.AppBody {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+}
+
+.MessageWrapper {
+    display: flex;
+    flex-direction: column;
+    width: 75vw;
+    flex: 1;
 }
